# hoard

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/hoard/: __init__.py  cache.py  composite.py  fs.py  hoard.py  item.py  redis.py  remote.py  s3.py  secret.py  serialize.py  view.py
src/hoard/test/: test_file.py  test_hoard.py  test_serialize.py
src/hoard/utils/: argparse.py
